tests/NormalTests/paczka1/fuzzy1/99228236.err
Error in line 4: qVF A965 64,8
Error in line 9: rikFaScF17G S778 30,2
Error in line 5: d0shHK S465 67,2
Error in line 15: d0shHK S778 16,4
Error in line 24: qVF A965 51,1
Error in line 14: rikFaScF17G A466 59,0
Error in line 26: qVF A466 62,3
Error in line 27: rikFaScF17G A965 63,4
